# ModerationBot

./: README.md  add_reactions.py  afk.py  automod.py  challenges.py  community_mod.py  data.json  embeds.py  helpreview.py  helproom.py  info.py  levelsys.py  logger.py  lyrawelcome.py  lyrawelcomev2.py  main.py  misc.py  moderation.py  pyproject.toml  python_challenges.py  python_help.py  role_application.py  self_role.py  webserver.py  welcome.py
