[tool.poetry]
name = "orange"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pymongo = "^3.11.2"
replit = "^2.0.0"
textblob = "^0.15.3"
discord = "^1.0.1"
dnspython = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
